--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
 	</form>
 	<div>
 		<table border="0" id="contactsTbl">
-			<tr>
-				<th colspan="2">Name</th>
-				<th>Phone</th>
-				<th>Email</th>
-				<th>Actions</th>
-			</tr>
+			<thead>
+				<tr>
+					<th colspan="2">Name</th>
+					<th>Phone</th>
+					<th>Email</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+			</tbody>
 		</table>
-	</div>
-	
-	
-	<div>
-		test
 	</div>
 	<!-- Project -->
 	<script src="main.js"></script>
