--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<input type="email" name="email" id="email" /><br />
 		<button id="addBtn">Add</button>
 		<button id="resetBtn">Reset</button>
+		<button id="refresh">show Constants</button>
 	</form>
 	<div>
 		<table border="0" id="contactsTbl">
