--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
 		<button id="addBtn">Add</button>
 		<button id="resetBtn">Reset</button>
 		<button id="refresh">show Constants</button>
+		<button id="save" visible="false">Save</button>
 	</form>
 	<div>
-		<table border="0" id="contactsTbl">
+		<table id="contactsTbl">
 			<thead>
 				<tr>
 					<th colspan="2">Name</th>
 					<th>Phone</th>
 					<th>Email</th>
-					<th>Actions</th>
+					<th width="10%">ID</th>
+					<th width="15%">Actions</th>
 				</tr>
 			</thead>
 			<tbody>
