--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		<input type="tel" name="phone" id="phone" /><br />
 		<label for="email">Email:</label>
 		<input type="email" name="email" id="email" /><br />
-		<button id="addBtn">Add</button>
+		<button id="addBtn" onclick="">Add</button>
 		<button id="resetBtn">Reset</button>
 		<button id="refresh">show Constants</button>
-		<button id="save" visible="false">Save</button>
+		<button id="save" visible="false">Save locally</button>
 	</form>
 	<div>
 		<table id="contactsTbl">
