--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <label for="email">Email</label><br>
         <input type="email" name="email" id="" placeholder="Enter e-mail..."><br>
         <button onclick="onSubmit()">Add Contact</button>
-        <button onclick="getFromLocal('contacts')">Load local Contacts</button>
-        <div id="errorMsg" class="hide">
+        <div id="errorBox" class="hide">
             <h4>Error Founds:</h4>
+            <div id="errorMsg">
+            </div>
         </div>
     </fieldset>
     <table id="contacts-tbl" class="table">
